# XorList

./: .gitignore  CMakeLists.txt  GoogleTests.h  StackAllocator.h  XorList.h  main.cpp
googletest-master-2/: CTestTestfile.cmake  Makefile  cmake_install.cmake  googletest-distribution.cbp
googletest-master-2/googlemock/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  gmock.cbp
googletest-master-2/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gtest.cbp
